--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8">
 
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <metaname="viewport" content="width=device-width, initial-scale=1">
 
     <title>Code Louisville Student Portfolio</title>
 
@@ -68,7 +69,7 @@
 
         <div class="aboutme-content">
 
-            <img src="http://placekitten.com/600" alt="Profile Photo" class="aboutme-photo">
+            <img src="https://img.freepik.com/free-vector/hand-drawn-flat-halloween-zombies-collection_23-2149101275.jpg?w=900&t=st=1699319022~exp=1699319622~hmac=37da9f279e50a594455068510d0dae9278c4a1b12ca3c1aaaf4a7c099384799e" alt="Profile Photo" class="aboutme-photo">
 
             <h2>About Me</h2>
 
@@ -115,6 +116,22 @@
         </main>
     
     </section>
+    <section class="contact-container" id"contact">
+        <h2>Contact Info</h2>
+         <div class="contact-content">
+         <div class="email"
+              <h3>Email Mandy:</h3>
+         <a href="mailto:mandy@knowledge.org"> mandy@knowledge.org</a>
+         </div>
+       <div class="phone"
+              <h3>Call Mandy:</h3>
+         <a href="tel:6061234567"> 606-123-4567</a>
+         </div>
+   <div class="social media"
+              <h3>Follow Mandy:</h3>
+         <a href="https://www.facebook.com/codekentucky/"> Facebook</a>
+         </div>
+        </section>
 
     <section class="footer-container">
 
