adding all items

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
 
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <metaname="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <title>Code Louisville Student Portfolio</title>
 
@@ -69,7 +69,9 @@
 
         <div class="aboutme-content">
 
-            <img src="https://img.freepik.com/free-vector/hand-drawn-flat-halloween-zombies-collection_23-2149101275.jpg?w=900&t=st=1699319022~exp=1699319622~hmac=37da9f279e50a594455068510d0dae9278c4a1b12ca3c1aaaf4a7c099384799e" alt="Profile Photo" class="aboutme-photo">
+            <img src="img/5990108.jpg"
+            width="600" 
+            height="400">
 
             <h2>About Me</h2>
 
@@ -120,7 +122,7 @@
         <h2>Contact Info</h2>
          <div class="contact-content">
          <div class="email"
-              <h3>Email Mandy:</h3>
+              <h3>Email Mandy:</h3> 
          <a href="mailto:mandy@knowledge.org"> mandy@knowledge.org</a>
          </div>
        <div class="phone"
